--- a/wedding/HTML/index.html
+++ b/wedding/HTML/index.html
@@ -136,9 +136,9 @@
                    <div class="banner__shape3">
                       <img src="assets/img/banner/banner-shape3.png" alt="banner__shape">
                    </div>
-                   <h5 class="wow fadeInUp" data-wow-duration="2s">The Wedding of</h5>
+                   <h5 class="wow fadeInUp" data-wow-duration="2s">La boda de </h5>
                    <h1 class="wow fadeInDown" data-wow-duration="4s">Juan y Jaquelin</h1>
-                   <h3 class="wow fadeInUp" data-wow-duration="2s">You are invited</h3>
+                   <h3 class="wow fadeInUp" data-wow-duration="2s">Estas invitado</h3>
                 </div>
              </div>
           </div>
